fix: dark mode logo

--- a/src/app/components/menu/menu.component.less
+++ b/src/app/components/menu/menu.component.less
@@ -12,7 +12,6 @@
 
 .logo {
     max-width: 120px;
-    color: #262626 !important;
 }
 
 .part-2 {
