--- a/src/styles/themes/default.less
+++ b/src/styles/themes/default.less
@@ -18,6 +18,10 @@ figcaption {
     color: @grey-1
 }
 
+.logo {
+    color: #262626 !important;
+}
+
 .menu a {
     color: @grey-1 !important;
 }
